--- a/.github/workflows/packager.yml
+++ b/.github/workflows/packager.yml
@@ -3,7 +3,7 @@ name: Auto NIC packager
 # On every push
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
     paths:
       - "template/*"
 
