--- a/template/NIC/control
+++ b/template/NIC/control
@@ -1,4 +1,4 @@
-name "Ted2's Mod Menu Template v1.0.1"
+name "SERMIX MOD MENU v0.1.0"
 prompt FILTER "Bundle filter" "com.company.appname"
 constrain file "control" to package
 constrain "theos" to link_theos
