--- a/template/Makefile
+++ b/template/Makefile
@@ -38,7 +38,6 @@ PROJ_COMMON_FRAMEWORKS = UIKit Foundation Security QuartzCore CoreGraphics CoreT
 KITTYMEMORY_SRC = $(wildcard KittyMemory/*.cpp)
 SCLALERTVIEW_SRC =  $(wildcard SCLAlertView/*.m)
 IMGUI_SRC = $(wildcard IMGUI/*.cpp) $(wildcard IMGUI/*.mm)
-IMG_SRC = $(wildcard correct.png) $(wildcard check.png)
 MENU_SRC = Menu.mm
 
 include $(THEOS)/makefiles/common.mk
@@ -54,7 +53,7 @@ ifeq ($(IGNORE_WARNINGS),1)
 endif
 
 
-@@PROJECTNAME@@_FILES = Tweak.xm $(MENU_SRC) $(KITTYMEMORY_SRC) $(SCLALERTVIEW_SRC) $(IMGUI_SRC)
+@@PROJECTNAME@@_FILES = Tweak.xm $(MENU_SRC) $(KITTYMEMORY_SRC) $(SCLALERTVIEW_SRC)
 
 @@PROJECTNAME@@_LIBRARIES += substrate
 
