--- a/template/Makefile
+++ b/template/Makefile
@@ -53,7 +53,7 @@ ifeq ($(IGNORE_WARNINGS),1)
 endif
 
 
-@@PROJECTNAME@@_FILES = Tweak.xm $(MENU_SRC) $(KITTYMEMORY_SRC) $(SCLALERTVIEW_SRC)
+@@PROJECTNAME@@_FILES = Tweak.xm $(MENU_SRC) $(KITTYMEMORY_SRC) $(SCLALERTVIEW_SRC) $(IMGUI_SRC)
 
 @@PROJECTNAME@@_LIBRARIES += substrate
 
